# gotolibr

./: README.md  pyproject.toml
src/gotolibr/: __init__.py  module.py
