[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gotolibr"
version = "1.0"
description = "A simple library that allows you to use goto in Python"
authors = [
    { name = "scientificworld" }
]
maintainers = [
    { name = "scientificworld" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.14"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/scientificworld/gotolibr"
Repository = "https://github.com/scientificworld/gotolibr.git"
Issues = "https://github.com/scientificworld/gotolibr/issues"
